--- a/client/src/Pages/Navbar/Sidebar.css
+++ b/client/src/Pages/Navbar/Sidebar.css
@@ -3,7 +3,7 @@
     z-index: 999;
     width: 100%;
     height: 100%;
-    background: #184e85;
+    background: #0d0d0e;
     display: grid;
     align-items: center;
     left: 0;
